Make search button more prominent. Expand size of modal. Fix dark mode colors.

--- a/vectara-docusaurus-search/src/components/search/searchInput.scss
+++ b/vectara-docusaurus-search/src/components/search/searchInput.scss
@@ -15,6 +15,7 @@
   outline-color: transparent;
   outline-offset: -1px;
   font-size: $fontSizeMedium;
+  color: $colorText;
 }
 
 .searchInput__submitButton {
