--- a/vectara-docusaurus-search/src/components/search/searchModal.scss
+++ b/vectara-docusaurus-search/src/components/search/searchModal.scss
@@ -18,25 +18,24 @@ $modalPadding: 6vh;
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: $modalWidth;
+    max-width: 720px;
     max-height: calc(100vh - ($modalPadding * 2));
     z-index: $modalZIndex;
     pointer-events: all;
     background-color: $colorEmptyShade;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
       rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    max-width: 520px;
     border-radius: $sizeXs;
     overflow: hidden;
   }
 
   .searchModalResults {
     border-top: 1px solid $borderColor;
-    border-bottom: 1px solid $borderColor;
     overflow-y: auto;
   }
 
   .searchModalFooter {
+    border-top: 1px solid $borderColor;
     padding: 0 $sizeM;
     background-color: $colorLightShade;
   }
